Update and rename Data_Cleaning_Exercises_camp02.ipynb to Data_Cleaning_Exercises.ipynb

--- a/Data_Cleaning_Exercises.ipynb
+++ b/Data_Cleaning_Exercises.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Campus02 - Python Essentials\n",
+        "# FHJ - Python Essentials\n",
         "\n"
       ],
       "metadata": {
